Fix the dark mode color

--- a/styles/pages/index.fullscreen.module.css
+++ b/styles/pages/index.fullscreen.module.css
@@ -80,7 +80,7 @@
   margin-right: 10px;
   font-weight: normal;
   font-size: 12px;
-  color: #767676;
+  color: var(--stats-text-color);;
   text-align: left;
 }
 .main .stats {
@@ -89,7 +89,7 @@
   font-weight: normal;
   font-size: 12px;
   margin-bottom: 30px;
-  color: #767676;
+  color: var(--stats-text-color);;
   text-align: left;
 }
 .main .info {
@@ -97,7 +97,7 @@
   margin-right: 10px;
   font-weight: normal;
   font-size: 12px;
-  color: #cccccc;
+  color: var(--info-text-color);;
   text-align: right;
 }
 
